--- a/main.css
+++ b/main.css
@@ -1,11 +1,15 @@
-body {
-    background-color: #f6b93b;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #ffffff;
-    font-family: sans-serif;
+body {
+    background-color: #e58e26;
+    width: 100%;
+}
+
+.container {
+    width: 80%;
+    background-color: rgba(250, 211, 144, 0.2);
+    margin: 0 auto;
 }
